Extend client controller
